src/log/build_2021-03-22_10-36-16/pickplace/stderr.log
  File "/home/gy/Omron_TM_ROS2/src/install/pickplace/lib/python3.8/site-packages/pickplace/pickplace_program.py", line 5
    from src/libraries import Waiter
            ^
SyntaxError: invalid syntax

